<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profit" type="String" />
        <variable name="investment" type="String" />
        <variable name="exit" type="String" />
        <variable name="change" type="String" />

        <variable name="currency" type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/profit_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="?attr/android:colorBackground"
                app:navigationIcon="@drawable/delete"
                app:title="@string/profit_calculator_title"
                app:titleCentered="true"
                app:titleTextColor="?attr/colorOnBackground" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/profit_toolbar"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/tf_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profit_toolbar"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:divider="@drawable/ll_divider"
                android:orientation="vertical"
                android:padding="@dimen/default_padding"
                android:showDividers="middle">

                <com.google.android.material.search.SearchBar
                    android:id="@+id/profit_search_bar"
                    style="@style/CF_SearchBar.Profit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/android:colorBackground"
                    android:hint="@string/hint_search"
                    app:collapseIcon="@drawable/bookmark_outlined"
                    app:defaultMarginsEnabled="false" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_profit_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tf_buy_label"
                    app:endIconMode="clear_text"
                    app:prefixText="@{currency}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_profit_investment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tf_investment_label"
                    app:endIconMode="clear_text"
                    app:prefixText="@{currency}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_profit_sell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tf_sell_label"
                    app:endIconMode="clear_text"
                    app:prefixText="@{currency}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:divider="@drawable/ll_divider"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tf_profit_in_fee"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/tf_in_fee_label"
                        app:endIconMode="clear_text"
                        app:prefixText="@{currency}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tf_profit_ex_fee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/tf_ex_fee_label"
                        app:endIconMode="clear_text"
                        app:prefixText="@{currency}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tf_container"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardCornerRadius="24dp"
                app:contentPadding="@dimen/default_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/profit_result_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/profit"
                        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                        android:textColor="?attr/colorOnSurface" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/profit_result_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profit_result_title"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/default_padding"
                        android:text="@string/profit_n_loss"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        android:textColor="?attr/colorOnSurfaceVariant" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/profit_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profit_result_label"
                        android:layout_alignParentStart="true"
                        android:maxLines="1"
                        android:text="@{currency + profit}"
                        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                        android:textColor="?attr/colorOnSurface"
                        app:autoSizeMinTextSize="16sp"
                        app:autoSizeTextType="uniform"
                        tools:text="$123,456.78" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/profit_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profit_result_label"
                        android:layout_marginStart="@dimen/default_padding_small"
                        android:layout_toEndOf="@id/profit_result"
                        android:maxLines="1"
                        android:text="@{change + '%'}"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        android:textColor="?attr/colorOnSurface"
                        app:autoSizeMinTextSize="16sp"
                        app:autoSizeTextType="uniform"
                        tools:text="123,45%%" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/profit_result"
                        android:baselineAligned="false"
                        android:divider="@drawable/ll_divider"
                        android:orientation="horizontal"
                        android:showDividers="middle">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/default_padding"
                                android:maxLines="1"
                                android:text="@string/profit_investment_total"
                                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                android:textColor="?attr/colorOnSurfaceVariant" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/profit_investment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text="@{currency + investment}"
                                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                                android:textColor="?attr/colorOnSurface"
                                app:autoSizeMinTextSize="16sp"
                                app:autoSizeTextType="uniform"
                                tools:text="$123,456.78" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/default_padding"
                                android:maxLines="1"
                                android:text="@string/profit_exit_total"
                                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                android:textColor="?attr/colorOnSurfaceVariant" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/profit_exit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text="@{currency + exit}"
                                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                                android:textColor="?attr/colorOnSurface"
                                app:autoSizeMinTextSize="16sp"
                                app:autoSizeTextType="uniform"
                                tools:text="$123,456.78" />
                        </LinearLayout>
                    </LinearLayout>

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>
    </ScrollView>
</layout>